# Cpp-Basic-Template

./: CMakeLists.txt  README.md  default.nix  shell.nix
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/headers/: utils.hpp
src/sources/: utils.cpp
tests/: CMakeLists.txt  test_main.cpp
